# hoosh

./: .gitignore  BACKLOG.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-history.csv  benchmarks.md  codecov.yml  cyrius.cyml  cyrius.toml  deny.toml  hoosh  hoosh.cyml  hoosh.toml  tarpaulin-report.json
.github/workflows/: ci.yml  release.yml
benches/: e2e.rs  hot_path.rs  live_providers.rs  providers.rs  routing.rs
data/: cloud_pricing.json  models.json
docs/: doc-health.md  index.md
docs/architecture/: overview.md
docs/decisions/: 001-http-gateway.md  002-cryptographic-audit-chain.md  003-majra-messaging.md  004-auth-and-security.md  005-mcp-via-bote.md  006-kavach-tool-sandbox.md  007-cyrius-6-modernization.md  008-persistence-via-patra.md  009-concurrent-batch-inference.md  010-observability.md  011-multithreaded-accept-loop.md
docs/development/: performance.md  roadmap.md  rust-old-parity-review.md  state.md
fuzz/: Cargo.toml  batch_split.fcyr  inference_request.fcyr  message_content.fcyr  trace_extract.fcyr
fuzz/fuzz_targets/: fuzz_inference_request.rs
rust-old/benches/: hot_path.rs  live_providers.rs  providers.rs
rust-old/fuzz/fuzz_targets/: fuzz_message_content.rs
rust-old/src/: client.rs  hardware.rs  lib.rs  main.rs  metrics.rs  queue.rs
rust-old/src/budget/: mod.rs
rust-old/src/cache/: mod.rs  semantic.rs
rust-old/src/context/: mod.rs
rust-old/src/dlp/: patterns.rs
rust-old/src/middleware/: auth.rs
rust-old/src/provider/: anthropic.rs  deepseek.rs  grok.rs  llamacpp.rs  mod.rs  openai_remote.rs  openrouter.rs  tts.rs  whisper.rs
rust-old/src/server/: handlers.rs  mod.rs
rust-old/src/tools/: types.rs
scripts/: bench-history.sh  bench-live.sh  coverage.sh  security-scan.sh  sync-bote.sh  version-bump.sh
src/: audit.rs  client.rs  config.rs  cost.rs  error.rs  events.rs  hardware.rs  health.rs  lib.rs  main.cyr  main.rs  metrics.rs  queue.rs  router.rs  server.rs  telemetry.rs
src/budget/: mod.rs
src/cache/: mod.rs  semantic.rs  warming.rs
src/context/: compactor.rs  compression.rs  tokens.rs
src/cost/: mod.rs  optimizer.rs
src/dlp/: mod.rs  patterns.rs  scanner.rs
src/inference/: batch.rs  mod.rs
src/lib/: audit.cyr  auth.cyr  batch.cyr  budget.cyr  cache.cyr  compact.cyr  compression.cyr  config.cyr  dlp.cyr  events.cyr  handlers.cyr  hardware.cyr  health.cyr  http_client.cyr  http_server.cyr  logging.cyr  mcp.cyr  metadata.cyr  metrics.cyr  otlp.cyr  pool.cyr  pricing.cyr  provider.cyr  ratelimit.cyr  retry.cyr  route.cyr  router.cyr  semantic.cyr  storage.cyr  trace.cyr  types.cyr
src/middleware/: auth.rs  rate_limit.rs
src/provider/: anthropic.rs  deepseek.rs  grok.rs  groq.rs  llamacpp.rs  lmstudio.rs  localai.rs  metadata.rs  mistral.rs  mod.rs  ollama.rs  openai_compat.rs  openai_remote.rs  openrouter.rs  retry.rs  synapse.rs  tts.rs  whisper.rs
src/server/: audio.rs  handlers.rs  mod.rs  types.rs
src/tests/: mod.rs
src/tools/: bridge.rs  convert.rs  mod.rs
tests/: hoosh.bcyr  hoosh.tcyr  test.sh
