[package]
name = "hoosh"
version = "0.21.4"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only"
description = "AI inference gateway — multi-provider LLM routing, local model serving, speech-to-text, and token budget management"
homepage = "https://github.com/MacCracken/hoosh"
repository = "https://github.com/MacCracken/hoosh"
readme = "README.md"
documentation = "https://docs.rs/hoosh"
keywords = ["llm", "inference", "whisper", "ai", "gateway"]
categories = ["science", "web-programming::http-server"]
exclude = [".claude/", "target/"]

[features]
default = ["all-providers", "hwaccel"]
all-providers = ["ollama", "llamacpp", "openai", "anthropic", "deepseek", "mistral", "groq", "openrouter", "lmstudio", "localai", "synapse", "grok"]
# Individual LLM providers
ollama = []
llamacpp = []
openai = []
anthropic = []
deepseek = []
mistral = []
groq = []
openrouter = []
lmstudio = []
localai = []
synapse = []
grok = []
# Speech-to-text (whisper.cpp bindings)
whisper = ["dep:whisper-rs"]
# Text-to-speech (piper TTS, ONNX-based)
piper = []
# Hardware detection for model placement
hwaccel = ["dep:ai-hwaccel"]

[[bin]]
name = "hoosh"
path = "src/main.rs"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
bytes = "1"
async-trait = "0.1"

# Async / HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2"] }
axum = "0.8"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
async-stream = "0.3"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"

# Caching
dashmap = "6"

# Audit logging
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Hardware detection
ai-hwaccel = { version = "0.21.3", optional = true, default-features = false, features = ["vulkan", "rocm", "cuda"] }

# Speech-to-text
whisper-rs = { version = "0.16", optional = true }

# Text-to-speech (piper support planned — deps have upstream compat issues)
# piper-rs = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "routing"
harness = false

[[bench]]
name = "providers"
harness = false

[[bench]]
name = "live_providers"
harness = false

[[bench]]
name = "e2e"
harness = false
