[package]
name = "hoosh"
version = "1.1.0"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only"
description = "AI inference gateway — multi-provider LLM routing, local model serving, speech-to-text, and token budget management"
homepage = "https://github.com/MacCracken/hoosh"
repository = "https://github.com/MacCracken/hoosh"
readme = "README.md"
documentation = "https://docs.rs/hoosh"
keywords = ["llm", "inference", "whisper", "ai", "gateway"]
categories = ["science", "web-programming::http-server"]
exclude = [".claude/", "target/"]

[features]
default = ["all-providers", "hwaccel"]
all-providers = ["ollama", "llamacpp", "openai", "anthropic", "deepseek", "mistral", "groq", "openrouter", "lmstudio", "localai", "synapse", "grok"]
# Individual LLM providers
ollama = []
llamacpp = []
openai = []
anthropic = []
deepseek = []
mistral = []
groq = []
openrouter = []
lmstudio = []
localai = []
synapse = []
grok = []
# Speech-to-text (whisper.cpp bindings)
whisper = ["dep:whisper-rs"]
# Text-to-speech (piper TTS, ONNX-based)
piper = []
# Sentiment analysis on responses
sentiment = ["dep:bhava"]
# Hardware detection for model placement
hwaccel = ["dep:ai-hwaccel"]
# Tool use & MCP integration (bote protocol + szal built-in tools)
tools = ["dep:bote", "dep:szal"]
# OpenTelemetry trace propagation
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
# Data loss prevention — PII scanning, content classification
dlp = ["dep:regex"]

[[bin]]
name = "hoosh"
path = "src/main.rs"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
bytes = "1"
async-trait = "0.1"

# Async / HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "http2"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
async-stream = "0.3"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"

# Caching
dashmap = "6"

# Hot-reload
arc-swap = "1"

# Queue & messaging
majra = { version = "1.0.2", default-features = true }

# Metrics
prometheus = "0.14"

# Audit logging
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"

# Personality & emotion engine
bhava = { version = "0.23.3", default-features = false, features = ["sentiment"], optional = true }

# Tool use & MCP protocol
bote = { version = "0.22.3", optional = true, default-features = false }
szal = { version = "0.23.4", optional = true, default-features = false }

# Hardware detection
ai-hwaccel = { version = "1.0.0", optional = true, default-features = false, features = ["vulkan", "rocm", "cuda"] }

# DLP / content scanning
regex = { version = "1", optional = true }

# Speech-to-text
whisper-rs = { version = "0.16", optional = true }

# OpenTelemetry (feature-gated)
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

# Text-to-speech (piper support planned — deps have upstream compat issues)
# piper-rs = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "routing"
harness = false

[[bench]]
name = "providers"
harness = false

[[bench]]
name = "live_providers"
harness = false

[[bench]]
name = "e2e"
harness = false

[[bench]]
name = "hot_path"
harness = false
