[package]
name = "hoosh-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hoosh = { path = "..", features = ["all-providers", "dlp"] }
serde_json = "1"

[[bin]]
name = "fuzz_inference_request"
path = "fuzz_targets/fuzz_inference_request.rs"
doc = false

[[bin]]
name = "fuzz_message_content"
path = "fuzz_targets/fuzz_message_content.rs"
doc = false
